<?xml version="1.0"?>
<package>

  <name>xbacov04</name>
  <version>0.1.0</version>
  <description>Project Rescuers</description>
  <maintainer email="robofit@gmail.com">robofit</maintainer>
  <author>robofit</author>
  <license>BSD</license>

  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>art_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>art_utils</build_depend>
  <build_depend>python-qt-bindings</build_depend>
  <build_depend>python-pygraphviz</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>libqt5-dev</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>art_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>art_utils</run_depend>
  <run_depend>python-qt-bindings</run_depend>
  <run_depend>python-pygraphviz</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>libqt5-dev</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
